--- a/Server/package.json
+++ b/Server/package.json
@@ -21,7 +21,9 @@
   "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.2.0",
+    "@types/sharp": "^0.31.1",
     "dotenv": "^17.2.1",
     "eslint": "^9.32.0",
     "express": "^5.1.0",
